--- a/webapp/backend/app/templates/base.html
+++ b/webapp/backend/app/templates/base.html
@@ -187,6 +187,7 @@
     <!-- ============================================================== -->
     <!-- All Jquery -->
     <!-- ============================================================== -->
+    {% block script %}
     <script src="../static/assets/libs/jquery/dist/jquery.min.js"></script>
     <!-- Bootstrap tether Core JavaScript -->
     <script src="../static/assets/libs/popper.js/dist/umd/popper.min.js"></script>
@@ -199,6 +200,7 @@
     <script src="../static/js/sidebarmenu.js"></script>
     <!--Custom JavaScript -->
     <script src="../static/js/custom.min.js"></script>
+    {% endblock %}
 </body>
 
 </html>
